--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,27 +1,25 @@
 ---
-title: 七哥老家行情:女学生3000,结扎或不能生的500至1000
+title: 新疆西藏有姿色女孩都是中共祭品供品,器官收割无处不在
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2056581/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2056740/)
 
-G-TV视频链接：[https://gtv.org/video/id=6212402e1408ee3a03a23a97](https://gtv.org/video/id=6212402e1408ee3a03a23a97)
+G-TV视频链接：[https://gtv.org/video/id=6212412d1408ee3a03a23b8a](https://gtv.org/video/id=6212412d1408ee3a03a23b8a)
 
-**郭文贵先生：**我在2017年爆料我跟大家就说过，我亲自我去看过在河南台前县还有河南范县，就范县和台前县跟我老家的古城就是一个，大概就是一个大堤之隔，包括那卖媳妇的。现场的买卖女性的就是在地下室的都是裸体的，在麦秸上睡着，拿盖的一盖，他怕她跑啊，都不能穿衣裳，拿脚镣手铐拴上。
+**郭文贵先生：**然后说到绑架。绑架在中国现在法律上，已经给了法律上的习以为常，是合理的，这是一个巨大的人权的讽刺，叫中国“半边天”；第二，器官移植。这不仅在法轮功，它在任何“功”上都在实现，没有不实现的；新疆大屠杀，西藏，西藏和新疆但凡有点姿色的女孩都会被选出去，以音乐团、文工团的形式成为了祭品和供品，只是被当地的村长还是当地的县长，还是说西藏的省长、自治区的书记，还是被中共老头，反正总有人来享受你的青春和美丽，你就是供品和性品。
 
-那个（价格）是多少呢？就3000块是女学生;500到1000之间就是结过扎的或者说是不能生孩子的，年龄是偏大点的;像小新像文真这样的是3000块钱的价格，像“九指妖”那样的都是免费，免费啊。
+然后器官移植。器官移植当然不是你亨利小哥……你移植啥啊？你移植得起吗？你移植完了，光一个排他性反应、看病的钱你都付不起，亨利小哥，给你换俩肾你换得起吗？你养得起这俩肾吗？可不是器官移植完了你就没事了，那还得拿药养着呢。
 
-我不是开玩笑，我亲自去过，我在2017年爆料就说过。就像你像文真就拿麻袋给你弄过去，就拿麻袋装走，这就是绑架。而且在我山东老家，河南、山东，最多来的人就是四川和湖北，就在山东、河南的农村人眼里边以为四川这地方就穷得没饭吃。
+李友吃那海狗丸，吃完海狗丸，那海狗丸一副，真正的海狗一只多少钱海狗丸多少钱？胡舒立吃下去两粒，那一粒都是十来万呐，是吧？李友他两有北大医院可以处理这个所谓的叫狗连茎的事，你别人你有本事处理狗连茎的事吗？是吧？他俩狗连茎了，海狗丸无限膨大，出不来了，人家送到北大医院，人家是最好的医科，是吧？你有吗？
 
-真的是很奇怪，绝大多数都是四川，四川女孩漂亮。真的，就像文真就像小新一样，长得白白的、小小的，很精灵的，是吧？喜欢这种，你们这绝对（被）那些人逮着绝对把你俩给绑了。绑完以后，把你玩够了、玩傻了，全村的人全享受完了再卖掉，真的就跟猪狗一样。
+你（文）大石你发生生理反应以后你怎么取，把你的蛋取出来啊？你的蛋只能砸掉坏掉给你割下来了，是吧？人家有那个条件，海狗丸人民币十几万一丸，吃两丸，折腾两三个小时，在一种幻觉中想飞就飞，想落就落，可以上天入地，就像吸了大麻一样，你们有这本事吗？
 
-结果昨天我问你七嫂，我说：“你记得当年这事儿吗？”她说：“在咱家后院儿、前院儿，就咱那村里边最起码有六七个。”我浑身一激灵，我说：“就是啊。”
-
-你知道买这些孩子绝大多数都是60岁或者50岁或40岁以上完全没有媳妇、娶不了媳妇，家里没饭吃的这种，那你说他都没饭吃、娶不上媳妇、精神不正常，他怎么能给这女的吃饭呢？
+那共产党所有更换器官，它的器官是换一个成本30万、50万、200万、300万杀一个人。换完以后的排他反应，你有这个药吗？你花得起吗？人家不用中国的药，人家是（用）世界最好的药，那药都是几万几十万几百万，你有钱吗？
 
 字幕来源：[2022月2日6日 《文贵大直播》全文字版](https://gnews.org/zh-hans/1971450/)
 
 编辑整理：Davis；
 
-字幕文件制作：大好河山；
+字幕文件制作：神兵；
 
 视频制作及上传：Cindy；
 
