--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,33 +1,31 @@
 ---
-title: 七哥第一次ED:救走给七哥唱塞北的雪并以身相许的女孩
+title: 中国人思想里从没把女人同等过,没人觉得贩卖女人不正常
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2056443/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2056663/)
 
-G-TV视频链接：[https://gtv.org/video/id=62123dec1408ee3a03a238a6](https://gtv.org/video/id=62123dec1408ee3a03a238a6)
+G-TV视频链接：[https://gtv.org/video/id=621240b81408ee3a03a23b19](https://gtv.org/video/id=621240b81408ee3a03a23b19)
 
-我人生有三次阳痿，我真让共产党“郭三秒”他没说对，“郭三次阳痿”真有过。我今天给我们自己爆个料，你们想听吗？说实话，你不想听我就不说了，少儿不宜。现在18岁以下的全下去，想听吗？
+**郭文贵先生：**然后你看到昨天我在盖特上发的就是一个政法大学的教授他说了句话：按照中国人民法律141条（还是）241条？贩卖人口，贩卖一个女的（判处）3年以下徒刑或者强制拘役或者拿钱了事；你要干死20只癞蛤蟆（判处）3年以上5年徒刑，而且是干两次弄两次的刑，它叫累刑犯罪；贩卖女的，一次（卖）两个、三个、一百个一样的罪，3年以下。
 
-想听？我第一天发生说的实在话，其中有一个当年最火的歌星，就是要加入我们永高影视。当时的我们永高影视培养了N个明星出来的，其中一个歌手，真的是非常可爱的一个歌手，非常非常可爱，很年轻非常棒的歌手。很漂亮，个不太高，很小，比小新还就是个还小——小新是瘦，她是干瘦。你知道，小新长得架儿搁着，就框架搁着呢，她就长得很瘦，歌就唱的力量大到不行。
+就中国女人是“半边天”，你知道我最受不了的，就刚才我（唱）《塞北的雪》，咱这姐们儿被救出来的看得哭得一塌糊涂，说：“七哥，我现在如梦境看着你直播，有些话你可以说得更直接一点，我都可以站出来参加直播，我真的是新生了一把。”她说：“这个体制太邪恶了，没有一样儿是真的，你就要这么说话。”
 
-当时来跟我吃饭，当时那几个这红那红都没有了，在一桌子吃饭的时候，她一直开嗓子我就傻眼了，她就还给我唱过《塞北的雪》，第一首歌。但是有一天就在那贵宾楼总统套房，我每天在那见明星，所谓的——我可知道星探是干啥的，星探就是先探你身体，你知道吗？——到那去，他天天就这样。星探就先探你身体，脱光看看，没见过多少人不好意思的，没见过！就是结果有一天这个女孩来了，唱完《塞北的雪》，还唱了彭丽媛所有的歌。
+那么我想告诉大家，像这样的女孩如果没跳出去，她在共产党那会什么样的结局？她绝对会在音乐圈会惨不忍睹。那共产党不能让你拍的那些拐卖人口和政法大学讲出这些话，所有女人的“半边天”，你真的觉得是半边天吗？
 
-结果就是大家都上二楼呆着去了，然后另外一个楼，贵宾楼是三层楼的，然后我就到另外的一边。你这女孩就一回头“咔”就把裙子脱下来了，说：“你看”当时叫我是郭老板：“郭老板，你看我长得还可以吗？”
+就是咱们这位曾经唱《塞北的雪》的女孩，她的所谓介绍我认识人，姓王的一位女士，现在在国内是几个大明星的中介人，就是所谓的经理人。头一段时间说：“七哥，在中国女性上，这点上你不用批评太多，中国女性还是不错的，跟阿富汗比、跟中东比，咱算不错了，毕竟中国女人绝大多时候说了算。”
 
-“这个今天来我就属于你的了。”你知道亨利哥，你知道当时，亨利老哥啊。咱在那就是一个——我是有女儿，有儿子的爹，我也是个男人。那女孩真的是很漂亮，真的漂亮！就是一个自然性的女性，那个漂亮又瘦又小，但是那大地大，该那瘦那瘦，然后“黑森林”“咵咵咵的是吧？
+我说：“无知就是这么诞生的。就是让你死、让你被虐待被贩卖，贩卖你还（自我）感觉很好。”我刚才还跟她（发信息）说呢，我说：“当时你记得吗？你芬姐当时介绍你跟我认识的，她认为中国女性还过得的不错，我说下个话题，就是你们女性的待遇这种。” 听着呢这位战友，是吧？
 
-你是搂不住的，但是我真的就不行。我是怎么让——我这人没有前奏，没有感情的人，我跟谁都不行，根本不可能。结果这个女孩就成了我朋友。，我说既然是你要走这条路，我建议你不要去走演艺界，你干不下去的，你会毁得很惨。
+中国女性的“半边天”，我从我娘身上、我从我嫂子身上、我从你七嫂身上，我从来没有感受到过，即使在今天你七嫂子像我老板一样的，天天像训狗一样训着我，我也不觉得你七嫂子是“半边天”。我觉得中国人的思想里和境界里就没有把女人同等过，只是中国女人自我感觉认为自己被平等，这是为什么全社会女人被贩卖没有任何人觉得不正常，甚至你七哥我本人我真的很惭愧，我当年在老家看着，我也没有觉得不正常，这都八九（八九六四）以前的事，我没有觉得不正常，买媳妇就买媳妇啊。
 
-她说我一定要唱出名，她爹也是个军人，我最后真的是给她爹见了面，我说你这个女儿不要走这条路了，你又不差钱走这干什么？这个女儿就出了国了。
+我那时候是十三四岁，我到那里去看到买媳妇，还用我的名声，“郭七儿来了！郭七来了！” 还拿我的名声、江湖名声来吓唬人呢。就这个社会本来对女性的是发自内心的定位，真的是就是觉得女人就该买，就是工具就是商品，就是买卖。这就叫你到中东去这个女性，还有在印度一旦所谓的有了什么情，就拿石头砸死就活该，都围着看一样。这就叫愚昧，这就叫无知。这点你要看到西方的伟大。
 
-我真忘了这一单事了，我唱完《塞北的雪》这个女孩跟我联系了，我相信她今天也在看直播，刚才还给我发信息。现在叫我七哥，她说你一定要讲述我的人生，你救了我，我给你唱过《塞北的雪》，我真忘了！
-
-所以今天再唱《塞北的雪》的时候，她很惊讶，她说：“你能把歌唱成这样？”她说“当时你记得你还喊两嗓子”她说“喊得我捂耳朵当时”她说：“现在你竟然公开唱《塞北的雪》”——我完全忘了，七哥也被无数次“蓝金黄”，但咱救过人。
+我昨天跟你七嫂说，我说：“在我老家的贩卖人口在美国就绞刑，你绑架女的你就绞一回了；绑架完你再轮奸又绞你两回了；轮奸完你再把她给卖给别人，你就绞你三回了。”这就是真正的东西方的差距，这就是共产党这些“老杂毛”完全不懂的这叫人类的文明，还所谓“半边天”。
 
 字幕来源：[2022月2日6日 《文贵大直播》全文字版](https://gnews.org/zh-hans/1971450/)
 
 编辑整理：Davis；
 
-字幕文件制作：知津；
+字幕文件制作：神兵；
 
 视频制作及上传：Cindy；
 
