--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,49 +1,19 @@
 ---
-title: 七哥主笔侵占台湾大一统&amp;它毁香港圣城唱给香港和台湾
+title: 共产党比谁都清楚当年河南在案可查被拐卖妇女达一百万
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2056400/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2056630/)
 
-G-TV视频链接：[https://gtv.org/video/id=62123db21408ee3a03a2386c](https://gtv.org/video/id=62123db21408ee3a03a2386c)
+G-TV视频链接：[https://gtv.org/video/id=6212406c1408ee3a03a23ad2](https://gtv.org/video/id=6212406c1408ee3a03a23ad2)
 
-**郭文贵先生：**哎呀！这大早上起来你看这嗓子都是这样。这一发不可收拾，再来一段！
+**郭文贵先生：**然后我突然想起来，当年我跟公安部的那个李东生，那时候李东生还在中央电视台的时候呢，还没去公安部呢。我说：“听说你们最近做了个节目，就关于打拐、拐卖人口？”他说：“哎呀，做啥呀！我们本来小组去河南，就住在你那个裕达酒店，拍摄小组拍完以后回来说‘这个没法拍’。”
 
-我有一帘幽梦，不知与谁能共，
-
-多少秘密在其中，欲诉无人能懂，
-
-谁能解我情衷，谁将柔情深种，
-
-若能相知又相逢，共此一帘幽梦，
-
-这段你们往下，我那天给你谦虚了。这就是战友们要学习的，这歌真是我改的。为何我要灭共，是我一个字不差改给唐平、威廉王。包括一个“侵占台湾大一统”，还有“它毁香港圣城”百分之百是我写的，但我把这功劳都给唐平、威廉王。你觉得中国有这样的人吗？你让“路大脑袋”——哎！这都是我干的！“九指妖”——这都是我干的。现在“九指妖”、”蛇妖闫”就没差出来说：就我郭文贵是她生的了。就差这一点没说了，啥都是她的。你这帮孙子，就不要脸的事情。
-
-但是我们新中国联邦是什么？把好处全给战友，我们不说是自己的。你说我少啥了呢？我少啥了？我非得说，哎！唐平不对，这是我改的。有啥意思？因为我说这个歌，我是要唱给台湾同胞、香港同胞的。所以当看到这一段的时候，战友，老天爷是公平的。
-
-我喝了咖啡，要不漱、不喝口水我就觉得张不开嘴。我就很纳闷，很多喝完咖啡的，满嘴喷“哇哇哇”讲话，我就受不了。所以现在我再唱这歌是真不得了。我这歌词基本要背下来，但我还得看，我再唱下一段。你看这改的我觉得绝了。
-
-为何我要灭共，是谁带来苦痛
-
-多少愤恨在心中，唯有战友能懂
-
-它毁香港圣城，犯下罪孽深重
-
-欲占台湾大一统，必是黄粱一梦
-
-谁与七哥灭共，打破千年的牢笼，
-
-中华儿女多英雄，今朝盘古必相逢
-
-啦啦啦啦啦啦
-
-啦啦啦啦啦啦
-
-谁与七哥与共
+“仅仅在河南我们摸底儿和当地的公安上配合，光在河南就100多万，就现在可查、公安在册的，你怎么弄啊？我们（如果）说实话，人家河南不愿意，不说实话，咱们这边把火给点起来了，这个节目没法做！”共产党不知道吗？共产党比谁都清楚。
 
 字幕来源：[2022月2日6日 《文贵大直播》全文字版](https://gnews.org/zh-hans/1971450/)
 
 编辑整理：Davis；
 
-字幕文件制作：知津；
+字幕文件制作：神兵；
 
 视频制作及上传：Cindy；
 
