--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,39 +1,20 @@
 ---
-title: 中日财经爆&#124; 不惧中共小粉红抵制 Hybe去年获利益大增31％
+title: 俄罗斯对乌克兰发动全面军事行动，疼在中共
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2056399/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2056629/)
 
-撰稿：东京樱花团/peterwong
+撰稿：追着曙光跑
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/不惧中共小粉红抵制-Hybe去年获利益大增31％.jpg)
+据联合早报2月24日的报道，乌克兰外长库列巴称，乌克兰各地的军事设施都遭到俄罗斯的火箭炮的袭击。对于俄罗斯侵略性的攻击，乌克兰将捍卫国土安全直到胜利。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/WhatsApp-Image-2022-02-24-at-14.11.48.jpeg)图片来源：原新闻
+美、英、法等国驻联合国大使都谴责俄罗斯，在联合国寻求和平之际，俄罗斯却选择了战争。
 
-由于南韩男子天团“防弹少年BTS”线上音乐、周边商品热卖、代言广告收入成长，抵消了中共国抵制和演唱会收入下降的影响，BTS的娱乐经纪公司Hybe去年营业利益增长31％，达到1900亿韩元（1.59 亿美元），内容业务收入更是激增1.8倍。
+不过俄罗斯驻联合国大使内本齐亚称，俄罗斯并不是对乌克兰人民采取侵略性行动，而是要对付在基辅执政的军人政府。
 
-自从2020年10月中旬，BTS发表有关“朝鲜战争”言论，遭中共小粉红出征，已数次被围攻，最近一次发生在今年2月4日到20日北京冬奥期间。冬奥开幕式上，一名中共国表演者穿着韩服，引起中韩“网络论战”。
+郭文贵先生在2月23日的大直播中指出，普京会又打又不打，美国知道普京的战术，欧洲和美国到最后都会认为这场战争的幕后凶手是中共。之后会对中共进行政治、经济和金融等一系列制裁。这场源于习太阳和普大帝，灭于习太阳和普大帝的战争，最后都会由中国人买单！
 
-韩国一些议员指责中共国利用奥运舞台宣扬韩国文化，总统候选人抗议中共在“文化掠夺”。之后几天里，有关于韩服和谁可以穿韩服的紧张局势加剧，中国网友纷纷出征刊登穿韩服照片的韩国艺人。
+信息来源：[乌克兰外长：普京发动全面军事行动](https://www.zaobao.com.sg/realtime/world/story20220224-1245983)
 
-8日，防弹少年团成员SUGA（闵玧其）在IG帐户发布“D”的文字，并上传一张自己身穿韩服拍摄的旧照片，他身上穿的韩服类似韩国古代皇帝龙袍。
-
-SUGA IG帐号马上引来一些微博用户叫嚣BTS“滚蛋”，一名中共小粉红：“这是不可原谅的，这个男人的粉丝根本不应该留在中国，粉丝你也是中国人吗？”另外2名韩国流行歌手也因发布自己穿传统服装的照片，收到微博用户大量负面评论。
-
-2月7日，北京举行的短道竞速滑冰1000公尺的赛事中，代表韩国的黄大宪与李俊瑞选手都在小组竞赛中领先通过终点线，却同样在事后被判犯规而错失奖牌，最后该比赛被中国选手包揽金银牌，这起争议又引起中韩网友互撕。
-
-2月10日，中共小粉红的炮火转向BTS队长RM，因为RM在自己IG帐号贴出比赛的画面，还搭配2个拍手与竖起大拇指的表情符号，为本国选手加油。
-
-这引来中共小粉红在RM和BTS的IG帐号留下了恶意评论、呕吐和比中指的表情符号，BTS粉丝随即反击，用紫心表情来洗版留言区，淹没中国网友仇恨的评论。
-
-在微博上，一些愤怒的用户还留言要求中共国禁止输入BTS音乐，但也有许多中国用户为BTS叫屈，BTS支持自己国家选手也有错吗？BTS在中国有无数粉丝，微博上有超过500万粉丝。
-
-就算BTS 屡屡遭中共小粉红出征，BTS母公司Hybe集团2021年营收依然大增58％至1.25兆韩元。音乐销售额增长18％，而代言广告收入增长1.2倍，内容业务（包括以BTS为特色的游戏和网络漫画）收入激增1.8倍。
-
-消息来源:
-
-[不怕中國小粉紅出征 韓國防彈少年BTS母公司獲利仍大增31％](https://www.cmmedia.com.tw/home/articles/32420?utm_source=YH)
-
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
