--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,27 +1,27 @@
 ---
-title: 中日财经爆&#124;香港确诊再创新高 港共发消费券或增感染风险
+title: 法国将日本指定为战略伙伴国
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2056382/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2056582/)
 
-撰稿：东京樱花团/peterwong
+撰稿：东京樱花团/百花李香
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/香港确诊再创新高-港共发消费券或增感染风险.jpg)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2Fichef.bbci.co.uk%2Fimages%2Fic%2F512xn%2Fp0bqn7v1.jpg&amp;imgrefurl=https%3A%2F%2Fwww.bbc.com%2Fzhongwen%2Fsimp%2Fchinese-news-60490908&amp;tbnid=0_VA2-BEgl7wNM&amp;vet=12ahUKEwi6g5npu5f2AhWizIsBHaNjCrYQMygEegUIARCnAQ..i&amp;docid=Z6HSW0pStOlKQM&amp;w=512&amp;h=287&amp;itg=1&amp;q=%E9%A6%99%E6%B8%AF%E7%96%AB%E6%83%85&amp;ved=2ahUKEwi6g5npu5f2AhWizIsBHaNjCrYQMygEegUIARCnAQ)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/法国将日本指定为战略伙伴国.jpg)[图片来源](https://gnews.org/wp-admin/post-new.php#:~:text=THE%20DEBATE-,Macron%20in%20Japan%3A%20Upgrading%20the%20Franco%2DJapanese%20Strategic%20Partnership%20in%20the%20Indo%2DPacific,-Japan%20stands%20out)
 
-香港第五波疫情持续扩散，2月23日公布新增8674例中共病毒确诊，单日确诊数再创新高，港共当局进一步紧缩防疫措施的同时，又宣布向香港市民发放消费券，增加人员之间的接触，恐会再增加感染风险。
+法国外交部22日在其修订的印度-太平洋战略中，将澳大利亚从印度-太平洋战略中的“伙伴国家”降级为“其它双边伙伴国家”，这是因为在建立美英澳安全框架AUKUS的过程中，澳大利亚放弃了一项潜艇开发计划。
 
-根据香港媒体报导，卫生防护中心传染病处主任张竹君在疫情记者会通报，新增8674例确诊，其中3例为境外移入，其余为本土病例，另有7990例一采阳性的呈报个案。
+日本取代了澳大利亚，被指定为继印度之后的第二个战略伙伴国。根据修订版，澳大利亚在AUKUS上的问题，两国将在“个案”基础上继续保持双边关系。
 
-张竹君指出，过去24小时香港有24名病患染疫死亡，第五波疫情累计有153人病殁，其中90人为安老、残疾院舍院友，多为长者，第五波疫情至今的死亡率为0.3%，前四波是2.2%。
+今年上半年担任欧盟议长主席国的法国22日在巴黎举行了部长级会议，旨在加强欧盟与印太地区的关系。法国在2018年先于欧盟推出了印太战略，为配合这次部长级会议，法国修改了自己的战略。2018年以来，澳大利亚一直是与印度并列的最重要伙伴国。
 
-另外，财政司司长陈茂波23日公布2022年财政预算案，将再发放消费券，符合资格的18岁或以上香港永久性居民及新移民，可获得1万港币（约3.6万元台币）的电子消费券，最快4月会先向630万名已经成功登记的市民发放5000元，剩下的5000元年中再分批发放。
+信息源：
 
-消息来源:
-
-[香港增8674例确诊创新高将再发1万港元消费券](https://tw.news.yahoo.com/%E9%A6%99%E6%B8%AF%E5%A2%9E8674%E4%BE%8B%E7%A2%BA%E8%A8%BA%E5%89%B5%E6%96%B0%E9%AB%98-%E5%B0%87%E5%86%8D%E7%99%BC1%E8%90%AC%E6%B8%AF%E5%85%83%E6%B6%88%E8%B2%BB%E5%88%B8-135337640.html)
+[フランス、日本を戦略上パートナー国に　オーストラリアを格下げ](https://news.yahoo.co.jp/articles/69daa5b03f6e3311b77b371507d57d33ce044cc2#:~:text=)
 
 *编辑：东京樱花团/知了知了
 发布：东京樱花团/老黑*
+
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
