--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,27 +1,18 @@
 ---
-title: 喜贷款、喜存款蓄势待发，HPay（喜支付）是打开世界金融盒子的密码
+title: 谷女两袒，扇何人脸？
 ---
-`YALUN 亚伦` [轉載自GNews](https://gnews.org/zh-hans/2056193/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2056347/)
 
-新西兰伊甸农场Gnews组 财经G乐部-亚伦
+撰稿—韩国天池农场战友
+校对/上传—无明逆流
 
-2月23日，郭文贵先生于GTV和Gettr大直播中透露一定会发生的喜贷款业务正处于最后的法律研究阶段，同时喜存款业务也会上线，并表示，HPay（喜支付）是打开世界金融盒子的密码。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/ac1cabfe2643121df09f3bbb3b33afe0-1.jpg)图片来源Gettr
+2022年2月21日,中共媒体报道冬奥爆红女孩谷爱凌，要“回美国”斯坦福大学上学了。除此之外，谷爱凌还宣称：自己将来可能不会再代表国家队（中国）参加此类赛事了。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/W04.jpeg)
+一个月来，被中共媒体捧上天的谷爱凌，风头无两，在官宣引导下的老少粉红们，一时间又沸腾了，在各种社交媒体上高潮迭起，大肆叫嚣意淫:谷爱凌代表中国参赛充分证明，中国比美国好,社会主义就是比资本主义好，大国又崛起了，国威又扬了，就是好！就是好！还不到一个月时间，就被啪啪打脸，好在他们不但没有脑子，脸皮也够厚，也不要脸！
 
+稍有脑子的人对这一消息毫无意外，谷爱凌与中共勾兑来中国，如同嫖客和妓女的交易，各取所需嘛！中共这个老嫖客要的是得到面子的快感，谷氏母女这对妈咪小姐要的是钱。钱到手了不走等啥？还要跟老嫖客培养培养感情？去清华北大念念书洗洗脑？去丰县生八个孩子玩玩吗？
 
-喜贷款将是主要面向广大战友的贷款，未来要成为战友控制的贷款平台。具体操作方法是利用手中的HCoin（喜币）作为抵押物，抵押率不超过抵押HCoin（喜币）总价值的10%，贷款以HDO（喜美元）方式贷出。
-
-当然，喜贷款机制会规定可提现的HDO（喜美元）数额，也会限制喜贷款在HPay（喜支付）中的使用量。好消息是由于大量KYC喜账户的开通以及巨额的资金流入，以至于原本的部分锁币可能会提前释放出来，如果有必要的话可以卖掉HCoin（喜币）完成喜贷款的还款动作。
-
-同样，以战友为主导的喜存款也会上线。HDO（喜美元）的存款利率是每年5%-10%不等（根据存款锁定期），每年喜联储用等价值的HCoin（喜币）支付利息。这样做的好处，可以使得战友在第二年乃至以后不出资购买即可享有新的HCoin（喜币）。
-
-举例说明，假设存期10年的10万HDO（喜美元）存款，每年10%的利率，利息就是价值10000HDO（10万\*10%的喜美元）的HCoin（喜币）。假设发放利息时HCoin（喜币）100美元一个，即收到100个（10000/100）HCoin（喜币）作为利息。喜存款之后，还有可以直接贴现、无条件支付的喜保险。
-
-最后，所有HDO（喜美元）或HCoin（喜币）的流动都会以HPay（喜支付）来实现。值得一提的是，HPay（喜支付）是一个转账系统，而不是商务系统，所以HPay（喜支付）的流通不等同于商业交易。HPay（喜支付）是战略性的，将来不同的国家会有不同的政策，同样有不同的政策也会催生不同的对策。
-
-HPay（喜支付）是打开世界金融盒子的密码，是新中国联邦走向世界的财富钥匙，是解救肉体“锁链女”、思想“锁链女”的希望，这也是HPay（喜支付）的玄妙之处。
-
-新中国联邦人一定要拥有财富，只有真正的在财富上强大，才可以在庸俗的人面前有尊严，才可以更安全，才有资格具备维护正义的能力。
+习一尊猪手一挥撒了几千亿，要打造一个无与伦比的冬奥会，要让全世界看看厉害国有多厉害！粉红们高潮的时候永远无法理解，中共挥霍的每一分钱都会转嫁到他们头上！韭菜还在为镰刀欢呼！粉红们更无法理解，谷爱凌带给中国人民的深远伤害。谷爱凌大言不惭地对美国记者说：我在美国训练学习，我花钱了！这种为了利益就背信弃义，典型的中共思维，以为用钱就可以买到一切，有钱就可以破坏一切规则！谷爱凌的行为，只能让文明世界的人民更加讨厌中国人，让中共这样的组织和谷爱凌这样的人，来代表中国和中国人，全世界人民也将越来越反感华人群体。
 
  
 
