--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,23 +1,15 @@
 ---
-title: 特鲁多撤消了紧急法
+title: 秘翻在线：【速报】俄国媒体坐实普京下令发动战争
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2056189/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2056344/)
 
-翻译：  Evalu
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-355.jpg)
-图片来源： ici.radio-canada.ca
+撰稿：待命（文晓）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-356.jpg)（图片源自本文链接）
+日本雅虎网站２月２４日消息：俄罗斯媒体刚刚报道，总统弗拉基米尔-普京已经批准在乌克兰东部亲俄武装分子控制的地区采取军事行动。
 
-零对冲网2月23日报道，加拿大总理特鲁多今天说他认为目前的法律和规则足以保证人民的安全。
+信息来源：[【速報】プーチン大統領 親ロ派武装勢力支配地域での軍事行動を承認とロシアメディア (FNNプライムオンライン) – Yahoo!ニュース](https://news.yahoo.co.jp/articles/5cb1b82c3bb53ec3348ee381ec03145d0b3a6619/images/000)
 
-在加拿大立法机构投票延长紧急法以允许警察阻止骚乱后两天，现在总理特鲁多现在认为渥太华抗议已结束，他现在决定撤消紧急法。
-
-特鲁多上周首次启动紧急法，说需要警察的额外帮助以终止堵塞状况。
-
-目前为自由护航的银行账号仍然处于被冻结状态。
-
-##### 新闻来源： [Trudeau Revokes Emergency Powers Act](https://www.zerohedge.com/geopolitical/trudeau-set-revoke-emergency-powers-report)
-
-#  
+发布：Eric Kim
 
  
 
