--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,23 +1,27 @@
 ---
-title: COVID-19 最新情报｜罗马尼亚最大足球具乐部宣布禁止接种疫苗的球员参赛及效力
+title: CDC继续隐藏与中共病毒疫情有关的关键数据
 ---
-`關注組` [轉載自GNews](https://gnews.org/zh-hans/2056171/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2056284/)
 
-**撰文｜疫情关注组 / 发布时间｜24/02/2022**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/羅馬尼亞最大足球俱樂部宣佈禁止接種疫苗的球員參賽及效力.jpg)
-**更多资讯请关注官方盖特（Please follow our Gettr：**[**https://gettr.com/post/pl6k0218bf**](https://gettr.com/post/pl6k0218bf)**)**
+#### 撰稿：彩虹       
 
-罗马尼亚规模最大的足球具乐部 Steaua Bucharest 日前宣布，将全面禁止接种过 Covid-19 疫苗的球员再为球队效力，原因是接种过疫苗的球员已经“失去力量”并“开始倒在赛场或死在医院”。
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/16456746161.png)图片来源：纽约时报
+2月23日，《新闻极限》报道，CDC（疾病控制和预防中心）一年多来一直在收集关于COVID-19疫苗接种和使用废水报告追踪该疾病激增的数据，但没有公布它所收集的大部分数据，声称由于担心这些细节被误读而被扣留。
 
-该具乐部的老板，商人兼政治家吉吉·贝卡利（Gigi Becali）表示，他也不再允许接种疫苗的球员参加比赛，他不愿再看到原本伟大的球员渐渐的变得虚弱，他更不忍心再看到一个个年轻健康的球员死去。
+CDC发言人克莉丝汀·诺德隆（Kristen Nordlund）告诉《纽约时报》，该联邦机构推迟发布它所收集的不同部分的信息，因为“到最后，它还没有准备好进入黄金时间”，而且因为CDC“在收集任何数据时，优先考虑的是确保它的准确性和可操作性”。
 
-贝卡利强调，接种过 COVID-19 疫苗的人会倒下，会死在医院里，而那些拒绝接种疫苗的人却不会。他指出，“有人可能会笑话我，但我是对的，如果你看到CFR（CFR Cluj）和 Rapid（Rapid Bucuresti ）的球员们倒在地上，呼吸困难，你就该知道所有接种疫苗的人都会失去力量！”
+例如，两周前，CDC关于65岁以下成年人加强注射的有效性的报告没有提到18至49岁的人的数字，或者说，在该年龄段群体的前两剂疫苗使他们受到COVID-19的保护之后，（数据表明该疫苗）被认为不太可能从另一针中受益。
 
-贝卡利的这番言论不意外的引起了该国政府的强烈反感。当局在脸书官方页面 RO Vaccinare 上发布一份最新声明，反驳称“足球运动员在接种了 COVID-19 疫苗后不会失去力量。”并指出，“从医学和科学的角度来看，没有任何研究可以支持罗马尼亚某位人士的奇特观点。”
+值得关注的是，在另一份报告中，该机构首次公布了有关废水数据的信息，这些数据每天更新，可能显示出中共病毒（COVID）激增的早期迹象。然而，自中共病毒疫情开始以来，一些州和地方已经与CDC分享了这些信息，但这是该机构第一次公布这些发现。
 
-不过，仍然有不少当地民众支持贝卡利对疫苗的看法，他们认为，政府的声明恰恰反映了他们很心虚。
+但是，更为重要的是，几位熟悉被扣数据的人说，尽管这些数据的使用可以帮助地方和州的公共卫生官员有针对性地消除中共病毒，但已经收集的数据中只有一小部分被公布。
 
-来源｜[推特](https://twitter.com/Emishor/status/1496447904617312259?s=20&amp;t=_vOooKK2zDsQcuQM5gW2Pw)、[ESPN](https://www.google.com.hk/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=newssearch&amp;cd=&amp;ved=2ahUKEwjLht_1sJf2AhXiD0QIHb9KAJoQxfQBKAB6BAgQEAI&amp;url=https%3A%2F%2Fwww.espn.com%2Fsoccer%2Ffcsb%2Fstory%2F4600728%2Fromanias-fcsb-deny-owners-suggestion-to-not-pick-vaccinated-players&amp;usg=AOvVaw2UZFvqTNUpQEbDKVhmEXsf)
+据这些专家说，关于住院和死亡的全部信息，包括按年龄和疫苗接种状态分类的信息，可以帮助更好地确定健康的成年人是否需要加强注射，而且废水信息可以帮助更早地发现中共病毒变种和爆发情况。
+
+**新闻来源**
+
+[CDC Withholds Key COVID Data, Citing Fears of Misinterpretation](https://www.newsmax.com/newsfront/covid-cdc-pandemic-vaccines/2022/02/23/id/1058159/)
 
  
 
