--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,37 +1,23 @@
 ---
-title: 五角大楼警告俄罗斯军队随时进攻，情报部门称48小时内全面入侵
+title: 美国开始对俄罗斯执行经济制裁
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2056143/)
+`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/2056274/)
 
-#### 撰稿：彩虹       
+加拿大温哥华杨帆农场 枫叶快讯
 
-#### 责编：白夜
-![](https://assets.gnews.org/wp-content/uploads/2022/02/16456735211.png)图片来源：卫报
-据《国会山报》2月23日报道，西方领导人周三表示，俄罗斯似乎正在向乌克兰东部转移更多军队，而五角大楼则警告说，俄罗斯军队“随时可能发动攻击”。
+采编：风云小哥             编译撰稿：自由法兰西
+![拜登制裁亲俄地区](https://d.newsweek.com/en/full/1989207/biden-sanctions-pro-russia-regions.jpg?w=790&amp;f=b40ec619567d364c5febda1231b592e4)
+据美国媒体【每周要闻】2月21日报道，在总统普京承认乌克兰两个亲俄地区独立之后，美国总统拜登当天就宣布了对俄罗斯实施新的投资、贸易和金融制裁，以此剥夺其“从公然违反国际法中再获利”的机会。
 
-五角大楼新闻秘书约翰·柯比（John Kirby）在一次简报会上说：“我们当然相信，更多的俄罗斯军队正在进入[顿涅茨克和卢甘斯克地区]。我们不能非常具体地确认其数量和编制，所具有的能力是什么，但我们当然相信这正在发生。”
+报道称，普京对乌克兰东部［顿涅茨克］和［卢甘斯克］地区亲俄分裂势力的支持以及在该地区边境发起的军事冲突，不仅加剧了整个欧洲的紧张局势，也是对欧美联盟的挑衅。同时，英国政府当天也宣布，将联合美国对俄入侵乌克兰发起制裁。
 
-柯比强调：“我们相信，他们现在处于一种随时可能发动攻击的准备状态。”
+评论指出，俄罗斯近日对乌克兰的一系列军事入侵行动，是总统普京和中共党魁习近平此前在北京冬奥会期间，密谋共同发动战争计划的一部分。普习双方企图通过同时占领乌克兰和台湾，来对抗欧美制裁并延续各自在国内岌岌可危的政治生命。
 
-周三早些时候，拉脱维亚总理证实，俄罗斯军队已经进入了乌克兰东部的顿巴斯地区。
+校对编辑：硫酸羟氯喹64
 
-拉脱维亚总理阿特尔斯‧克里斯亚尼斯‧卡林斯告诉CNN：“根据我掌握的信息，普京正在向被占领的顿巴斯领土增派部队和坦克，根据任何定义，这都是跨越主权领土进入邻国的行为。”
+发稿：青青
 
-另据《新闻极限》2月23日报道，美国情报官员周三向《新闻周刊》（Newsweek）透露，俄罗斯正准备在未来48小时内对乌克兰实施全面入侵。
-
-这位美国官员说：“乌克兰总统已被警告，根据美国的情报，俄罗斯极有可能在48小时内开始入侵。来自飞机观察员的报告显示，俄罗斯今天早些时候侵犯了乌克兰的领空，疑似侦察机在乌克兰上空飞行了一小段时间。”
-
-一位接近乌克兰总统沃洛基米尔·泽伦斯基（Volodymyr Zelenskyy）政府的消息人士也证实，美国发出了这样的警告，尽管他指出，这是基辅在过去一个月内第三次被告知俄罗斯即将采取大规模军事行动。
-
-据《新闻周刊》报道，这位美国情报人士说，该入侵评估包括俄罗斯的空袭、巡航导弹和地面入侵，以及从北部与白俄罗斯的边境向首都基辅的推进。
-
-《新闻周刊》说，另一位参加了周二国家安全委员会电话会议的消息人士也向该出版物证实，白宫对克里姆林宫的军事行动仅限于俄罗斯支持的叛乱共和国感到“难以置信的不相信”，并认为入侵可能在24至48小时内发生。
-
-**新闻来源**
-
-[Pentagon says more Russian troops in Ukraine, ready to ‘attack at any time’](https://thehill.com/policy/defense/595562-pentagon-says-more-russian-troops-in-ukraine-ready-to-attack-at-any-time)
-
-[Report: US Intelligence Warns Ukraine Russia to Invade Within 48 Hours](https://www.newsmax.com/newsfront/russia-ukraine-invasion/2022/02/23/id/1058130/)
+新闻来源： [https://www.aljazeera.com/news/2022/2/21/former-us-secretary-of-state-mike-pompeo-to-visit-taiwan](https://www.aljazeera.com/news/2022/2/21/former-us-secretary-of-state-mike-pompeo-to-visit-taiwan)
 
  
 
