--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,36 +1,23 @@
 ---
-title: 德国公立保险公司警告 疫苗的副作用远高于官方报告
+title: COVID-19 最新情报｜罗马尼亚最大足球具乐部宣布禁止接种疫苗的球员参赛及效力
 ---
-`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2056067/)
+`關注組` [轉載自GNews](https://gnews.org/zh-hans/2056171/)
 
-翻译：冰糖葫芦喵
+**撰文｜疫情关注组 / 发布时间｜24/02/2022**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/羅馬尼亞最大足球俱樂部宣佈禁止接種疫苗的球員參賽及效力.jpg)
+**更多资讯请关注官方盖特（Please follow our Gettr：**[**https://gettr.com/post/pl6k0218bf**](https://gettr.com/post/pl6k0218bf)**)**
 
-编辑与校对：灭共文明、冰糖葫芦喵
+罗马尼亚规模最大的足球具乐部 Steaua Bucharest 日前宣布，将全面禁止接种过 Covid-19 疫苗的球员再为球队效力，原因是接种过疫苗的球员已经“失去力量”并“开始倒在赛场或死在医院”。
 
-《网关专家》2月23日报道，**德国一家大型公立医疗保险公司BKK的董事会成员警告，中共病毒疫苗副作用比官方机构报告的要严重得多，副作用案例数据也远高于官方的报告。**
+该具乐部的老板，商人兼政治家吉吉·贝卡利（Gigi Becali）表示，他也不再允许接种疫苗的球员参加比赛，他不愿再看到原本伟大的球员渐渐的变得虚弱，他更不忍心再看到一个个年轻健康的球员死去。
 
-**德国公立医疗保险公司BKK董事会成员Andreas Schöfbeck在世界报的一份报告中说，**“根据我们的计算，到今天为止，我们的数据显示，保险公司保单持有人**因接种中共病毒疫苗而产生并发症去看医生**的人数有40万。在比例相同的情况下，**按总人口推算，这个数值应该是高达300万人。**”
+贝卡利强调，接种过 COVID-19 疫苗的人会倒下，会死在医院里，而那些拒绝接种疫苗的人却不会。他指出，“有人可能会笑话我，但我是对的，如果你看到CFR（CFR Cluj）和 Rapid（Rapid Bucuresti ）的球员们倒在地上，呼吸困难，你就该知道所有接种疫苗的人都会失去力量！”
 
+贝卡利的这番言论不意外的引起了该国政府的强烈反感。当局在脸书官方页面 RO Vaccinare 上发布一份最新声明，反驳称“足球运动员在接种了 COVID-19 疫苗后不会失去力量。”并指出，“从医学和科学的角度来看，没有任何研究可以支持罗马尼亚某位人士的奇特观点。”
 
+不过，仍然有不少当地民众支持贝卡利对疫苗的看法，他们认为，政府的声明恰恰反映了他们很心虚。
 
-> JUST IN – Large German health insurance company analyzed data from 10.9 million insured individuals regarding vaccination complications.
-> 
-> The new data is "alarming," says BKK board member Schöfbeck in a report by WELT.[https://t.co/KV4orAjUCB](https://t.co/KV4orAjUCB)
-> — Disclose.tv (@disclosetv) [February 23, 2022](https://twitter.com/disclosetv/status/1496555793092685824?ref_src=twsrc%5Etfw)
-
-
-DiscloseTV在推特上贴出原文。
-报道指出，**根据健康保险公司BKK数据的分析得出，接种疫苗的副作用数字明显高于德国疫苗监管单位、保罗艾利希研究所的数据。**BKK的数字表明，2021年在德国报告的副作用总数可能达到数百万人。
-
-这家大型保险公司协会首次提供了关于毒疫苗副作用的数据。在周三的世界报报告视频通话中，Andreas Schöfbeck说，**这些最新统计的数据是一个 “警报信号”。**他还强调说，确定准确的数字很重要，而且我们迫切需要检查其后面的原因”。
-
-报道指出，这些数字与美国的VAERS报告系统中看到的数字相似。**VAERS网站上报告的数字明显高于美国的所谓医学精英们告诉我们的数字。**
-
-**新闻链接：**
-
-[Board Member of Large German Health Insurance Company Sounds the Alarm: Side Effects of COVID Vaccines Much Higher Than Official Reports (thegatewaypundit.com)](https://www.thegatewaypundit.com/2022/02/board-member-large-german-health-insurance-company-sounds-alarm-side-effects-covid-vaccines-much-higher-official-reports/)
-
-
+来源｜[推特](https://twitter.com/Emishor/status/1496447904617312259?s=20&amp;t=_vOooKK2zDsQcuQM5gW2Pw)、[ESPN](https://www.google.com.hk/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=newssearch&amp;cd=&amp;ved=2ahUKEwjLht_1sJf2AhXiD0QIHb9KAJoQxfQBKAB6BAgQEAI&amp;url=https%3A%2F%2Fwww.espn.com%2Fsoccer%2Ffcsb%2Fstory%2F4600728%2Fromanias-fcsb-deny-owners-suggestion-to-not-pick-vaccinated-players&amp;usg=AOvVaw2UZFvqTNUpQEbDKVhmEXsf)
 
  
 
