--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,27 +1,39 @@
 ---
-title: 委内瑞拉和古巴表明支持俄罗斯
+title: 大直播后记：乌克兰世界政治大戏，美国大赢中国人买单
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2056521/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2056684/)
 
-撰稿：东京樱花团/百花李香
+整理：流氓兔、枫叶红了
+编辑：文泓
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/委内瑞拉和古巴表明支持俄罗斯.jpg)[图片来源](https://www.newsweek.com/putin-shores-cuba-venezuela-ties-tensions-us-worsen-over-ukraine-1672365#:~:text=Putin%20Shores%20Up%20Cuba%2C%20Venezuela%20Ties%20as%20Tensions%20with%20U.S.%20Worsen%20Over%20Ukraine)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/4-54.png)图片来源：雅典娜设计组
 
-委内瑞拉的马杜罗和古巴的迪亚斯卡内尔两国政府22日表示支持俄罗斯总统普京对乌克兰局势的立场。
 
-这两个反美左翼政府都受到了美国严厉的经济制裁，军事和经济上都在依赖俄罗斯的支持。马杜罗向全国发表演讲，为俄罗斯对乌克兰的军事入侵进行辩护，赞同
+昨天我们战友老马发了4个视频，一个女学生被一群学生按在地上往阴道里边倒咖啡；一个（女）老师打孩子，比那个希特勒对待那个犹太人还残酷；然后一个中国的很富裕家庭小孩，拎着一条可爱的小狗在高楼上把它扔下去虐死……就是那种惨状，用什么样的语言话你都无法解除你心中的愤恨！这就是共产主义泯灭人性。
 
-俄罗斯承认乌克兰东部亲俄控制地区的独立。
+就在刚刚，我给你们几个在直播前说了几句话期间收到一个信息，我的一个同事的父亲刚刚过世，就在昨天。（原因）他没说，就说是血管的事，肯定是打疫苗（副作用）。今天凌晨2点钟，我们韩国的一个秘密战友的老婆才45岁就过世了。这位战友支持灭共和爆料革命，他老婆坚决不支持，打了3针不算数，又偷着打1针。他说老婆原来身体好得很，就是打疫苗（的恶果）。
 
-古巴外交部在声明中称，北大西洋公约组织（NATO）在俄罗斯边境附近的迅速扩张是对俄罗斯的安全和该地区和平的威胁，近几周来，美国政府在威胁俄罗斯的同时，也在国际社会助长即将入侵乌克兰的危机。
+然后，再看看我们今天的直播，我们谈乌克兰事情的时候，全世界都玩游戏的时候，记住普京是打了这场牌。一会给你们讲讲这场牌，普京怎么玩儿的，什么西方、英国搞出来什么？五大银行、三大寡头制裁；拜登特别严肃认真地搞了个新闻发布会；然后法国坚决制裁、北约坚决制裁。这真是太监拎着拐棍装作很长吓唬人，实际上不管用。这里边儿的背后故事是啥呀？一会儿我给你们解释，这就是美国和西方的政治，这就是人类的政治。
 
-信息源：
+我们中国人一定要懂得，新中国联邦要懂得，没有人可以帮我们灭共，只能有人利用我们灭共，我们是唯一能灭共的。一会儿我给你说一说，美国在世界政治舞台上表演的一出，你看看美驻联合国大使格林菲尔德跑到联合国告状去的那个表情，那不是真的告状，那是在玩世界政治。你看印度的谁都不得罪，你再看看美国在全世界玩了一场大赢的游戏。但是最后的输家，你都想不到。
 
-[ベネズエラとキューバ、ロシア支持　対ウクライナ軍事圧力擁護](https://www.jiji.com/jc/article?k=2022022400292&amp;g=int)
+（共产党吹嘘）万里长征一年能走两回，共产党能走万里长征，也就是从北京到纽约，二万五千里长征就这个（里程）数。（距离纽约）二万五千里之外的中国人买单。这场联合国的大戏，普京去搞乌克兰，以及所有这些（国家）看到这场戏的结果：美国人向全世界展示了，这个世界游戏不能没有我的参与！谁买单？是中国人，灾难呀！
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+看到老百姓的孩子被在阴道里倒咖啡、被人家欺负；无辜的小狗被从楼上扔下来；锁链女24年现在居然搞不清他爹他妈是谁，身份是谁？所有报道此事的人全抓，一个县竟然封路，全网删除（信息）。这个世界再不灭共，这个世界就会被灭了。我们长多帅还有用吗？我们多年轻、多厉害有用吗？只要共产党在，你有什么喜币、喜联储（都不管用）。
+
+就是共产党这帮老杂毛，这帮流氓不除，中共毒思想不除，我可以告诉大家，所有的中国人，你们的子女都会像我们不能放出来那些视频一样，像锁链女一样锁起来被强奸了，强奸你24年，生的孩子是谁的孩子都不知道。
+
+就像马云一样混了上万亿身价，查你、查你再查你，我查死你。就像七哥的龙头，龙头招你惹你了，你不是无神主义吗？你把龙头变成了龟头，你还不要脸地上那儿去搞冬奥会开幕式直播，你祖宗八辈要点脸吧！没有信仰的无神论的共产党，你这么迷信盘古龙头，把你毁了吗？你是无产阶级，你在瑞士银行的所有的钱，过去70年共产党的钱，钱算不算有产呢？就这样的共产党，还要被称为比爹娘还亲，它把你变成锁链女，生下不知道亲爹是谁的8个孩子。这样的冬奥会，这样的雪上运动，这样的彭帅，这样的谷爱凌……都要点脸吧，但凡是中国人，快醒来吧！
+
+资料来源：[2022年2月23日 文贵大直播](https://gettr.com/streaming/pwbjub06c5)
+
+发布：tianzhihuan
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
