--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,24 +1,29 @@
 ---
-title: 樱花灭共诗——江山锁（新韵）
+title: 川普谈俄乌危机，直言下一次危机就在台海！
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2056468/)
+`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2056676/)
 
-撰稿：东京樱花团/曲非烟
-![](https://assets.gnews.org/wp-content/uploads/2022/02/樱花灭共诗.png)
-一链锁江山，
+![](https://assets.gnews.org/wp-content/uploads/2022/02/3526256-PH_副本.jpg)图片来源：翻摄自俄罗斯国防部脸书
 
-何分女与男。
+俄乌局势紧张，俄罗斯总统普京承认乌克兰东部分离主义分子，所成立的「2独立国家」，遭到许多欧美国家谴责并采取制裁。美国前总统川普称普京是「天才」，还指责「拜登的无能领导」助长了普京的气焰，更指出下一个有危机的地点将是在中国，意指台海。
 
-家国同桎梏，
+简评：强势的川普在位时，中俄如病猫一般老实的趴着，拜登总统的上台的确助长了中俄的嚣张气焰。不过据郭文贵先生的爆料称，作为政客拜登是老手，美国这一招是一箭多雕。
 
-镣铐授皇权。
+第一，习太阳把整个中共与中共国拖下水，经济完了，信用完了，中共彻底完了。
+第二，普大帝自绝于俄罗斯人民，政治内部随时可能有突发事件。
+第三，跟了普京被威胁的东欧国家，最后所有经济制裁来自他们无法摆脱的欧洲。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/樱花灭共诗——江山锁（新韵）.jpg)
+俄乌危机正在上演，下一个危机就是台海危机，中共侵台的野心不会罢休！台湾人民请保重！台湾战友请保重！
 
-*图片：东京樱花团/闪闪
-校对：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+新闻来源：[三立新闻网](https://www.setn.com/News.aspx?NewsID=1076064)
+
+撰稿/发布：一叶知秋
+
+**更多资讯，请关注：**
+[多伦多蓝莲花农场 Gettr](https://gettr.com/user/Blue_Lotus)
+[多伦多蓝莲花农场 YouTube](https://www.youtube.com/channel/UCy1z2nsBLlE7BZyS_a_BMWw)
+[多伦多蓝莲花农场 Discord](https://discord.gg/awC74U4YwJ)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
