--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,25 +1,25 @@
 ---
-title: 展望未来 光明必将战胜黑暗
+title: 德大陆集团无视中共施压，继续投资立陶宛
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2056372/)
+`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/2056537/)
 
-作者：纽约磐石农场—在远方
+作者：纽约香草山教育部 Naughty(文行)
 ![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-在2月20日的大直播中，郭文贵先生详细分析了加拿大特鲁多政府的结局以及美国未来的政治走向。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/截屏2022-02-23-下午11.14.33.png)
-鉴于对沼泽地有着深刻地了解，早在加拿大卡车游行开始之前，郭先生就曾预见，特鲁多一定会把卡车运动定义为暴乱并加以镇压。但郭先生也提到，虽然特鲁多忠于他背后的黑暗势力，但其政府最终一定会被黑暗势力消灭，因为黑暗势力只会忠诚于它自己，保护它自身利益。
+波罗的海国家立陶宛因欢迎台湾设立“台湾代表处”受到中共多方打压，中共甚至威胁德国跨国公司大陆集团断绝和立陶宛的联系。
+![Continental Automotive achieves respectable result in Q2, 2021 -  Manufacturing Today India](https://www.manufacturingtodayindia.com/cloud/2021/11/17/Gx1fZjvL-Continental-2.jpg)https://www.manufacturingtodayindia.com/
+大陆集团在立陶宛拥有多个生产出口零部件的生产设施，中国是大陆集团汽车零部件的最大进口国之一。
 
-郭先生还展望道，在未来不超过三年的时间里，许多事情都会水落石出，但美国一定会大获全胜，并且将再次伟大。
+据路透社报导，在中共施压的情况下，德国大陆集团一名高管透露，公司仍将继续在立陶宛投资一家工厂。
 
-至于习近平和普京二人，郭先生指出，他们最担心的其实还是各自内部的反对力量。但郭先生也强调，中共国内的14亿人并不是都像“锁链女”一般被捆绑封口、无法反抗，还有许多像郭先生一样有实力、有勇气的战友正在默默地行动着。而在这场人类正义与邪恶的大较量中，光明必将战胜黑暗，且中共一定会被彻底消灭。
+外界普遍认为中共干预大陆集团等私营公司的业务是非法行为。中共此举不但将跨国公司拖入外交争端，还将自己置于与欧盟冲突的轨道上。
 
-参考链接：[2022年2月20日 《文贵大直播》全文字版](https://gnews.org/zh-hans/2045186/)
+欧盟于1月在美国、澳大利亚和台湾的支持下，就北京涉嫌限制立陶宛的贸易在世界贸易组织对中国提起了贸易诉讼。
+
+参考链接：[Continental to keep investing in Lithuania despite China pressure](https://financialpost.com/pmn/business-pmn/continental-to-keep-investing-in-lithuania-despite-china-pressure/wcm/2fe68dec-11b5-48a0-b5d1-0379ec7e0be6/amp/)
 
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen_Shot_2022-02-01_at_11.29.09_PM-1.png)
 
-总编：Irene木木
-编辑：静言
-校正/发稿：呼吸的雾霾（文小呼吸）
+编辑/校正/发稿：呼吸的雾霾（文小呼吸）
 
 **更多资讯，更多关注**
 [**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
