--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,22 +1,27 @@
 ---
-title: 突发｜战争爆发？普京授权出动轰炸机 乌克兰首都传出爆炸声 （持续更新）
+title: 中日财经爆&#124;香港确诊再创新高 港共发消费券或增感染风险
 ---
-`關注組` [轉載自GNews](https://gnews.org/zh-hans/2056356/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2056382/)
 
-**撰文/ 港台前线｜发布日期/ 24/02/2022**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/普京授權出動轟炸機-烏克蘭首都傳出爆炸聲-1.jpg)
-**更多资讯请关注官方盖特｜please follow our Gettr （**[**https://gettr.com/post/pl6w8he0b9**](https://gettr.com/post/pl6w8he0b9)**)**
+撰稿：东京樱花团/peterwong
 
-**最新消息指，俄罗斯空军出动战略轰炸机已从克里米亚进入乌克兰，顿涅茨克地区北部发生至少4次巨大爆炸，首都基辅亦传出爆炸声。**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/香港确诊再创新高-港共发消费券或增感染风险.jpg)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2Fichef.bbci.co.uk%2Fimages%2Fic%2F512xn%2Fp0bqn7v1.jpg&amp;imgrefurl=https%3A%2F%2Fwww.bbc.com%2Fzhongwen%2Fsimp%2Fchinese-news-60490908&amp;tbnid=0_VA2-BEgl7wNM&amp;vet=12ahUKEwi6g5npu5f2AhWizIsBHaNjCrYQMygEegUIARCnAQ..i&amp;docid=Z6HSW0pStOlKQM&amp;w=512&amp;h=287&amp;itg=1&amp;q=%E9%A6%99%E6%B8%AF%E7%96%AB%E6%83%85&amp;ved=2ahUKEwi6g5npu5f2AhWizIsBHaNjCrYQMygEegUIARCnAQ)
 
-* * *
+香港第五波疫情持续扩散，2月23日公布新增8674例中共病毒确诊，单日确诊数再创新高，港共当局进一步紧缩防疫措施的同时，又宣布向香港市民发放消费券，增加人员之间的接触，恐会再增加感染风险。
 
-俄罗斯总统普京今日（24日）发表电视讲话，宣布授权俄军在乌克兰展开军事行动。普京声称，俄罗斯的目的并非占领乌克兰，而只是保护乌克兰东部居民，又指攻击是为了“将乌克兰去军事化、去纳粹化”。他还警告企图干预俄罗斯行动的其他国家，会有前所未见的后果。
+根据香港媒体报导，卫生防护中心传染病处主任张竹君在疫情记者会通报，新增8674例确诊，其中3例为境外移入，其余为本土病例，另有7990例一采阳性的呈报个案。
 
-美国总统拜登回应称，普京已经挥兵进入乌克兰东部地区，显示他选择要开始一场有预谋的战争，美国会对俄罗斯采取进一步措施。
+张竹君指出，过去24小时香港有24名病患染疫死亡，第五波疫情累计有153人病殁，其中90人为安老、残疾院舍院友，多为长者，第五波疫情至今的死亡率为0.3%，前四波是2.2%。
 
-來源｜[CNBC](https://www.cnbc.com/2022/02/23/putin-says-russia-open-to-diplomacy-as-moscow-hit-with-fresh-sanctions.html)、[AJ](https://www.aljazeera.com/news/2022/2/23/ukraine-declares-state-of-emergency-amid-fears-of-invasion-liveblog)
+另外，财政司司长陈茂波23日公布2022年财政预算案，将再发放消费券，符合资格的18岁或以上香港永久性居民及新移民，可获得1万港币（约3.6万元台币）的电子消费券，最快4月会先向630万名已经成功登记的市民发放5000元，剩下的5000元年中再分批发放。
 
+消息来源:
+
+[香港增8674例确诊创新高将再发1万港元消费券](https://tw.news.yahoo.com/%E9%A6%99%E6%B8%AF%E5%A2%9E8674%E4%BE%8B%E7%A2%BA%E8%A8%BA%E5%89%B5%E6%96%B0%E9%AB%98-%E5%B0%87%E5%86%8D%E7%99%BC1%E8%90%AC%E6%B8%AF%E5%85%83%E6%B6%88%E8%B2%BB%E5%88%B8-135337640.html)
+
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
