--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,57 +1,29 @@
 ---
-title: 七哥七嫂当年在圆山饭店总统套房亲历蒋介石宋美龄显灵
+title: 纽约市长宣布将尽快取消疫苗强制令与疫苗护照
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2056559/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2056703/)
 
-G-TV视频链接：[https://gtv.org/video/id=62123fa01408ee3a03a23a14](https://gtv.org/video/id=62123fa01408ee3a03a23a14)
+#### 【雅典娜快讯】，紧贴时代脉搏
 
-**郭文贵先生：**我昨天跟你七嫂还说一句话，你七嫂讲，当年我们去台北的时候，圆山饭店住在圆山饭店，你说这晚上，你说你嫂子睡着了，结果的总统套房窗帘，“哗哗”的就……我看着窗帘: 我这怎么就开了呢？我说这怎么会开了呢？
+整理：围剿维尼熊
+编辑：Mohegayer K. Simon
+![](https://assets.gnews.org/wp-content/uploads/2022/02/截圖-2022-02-02-下午10.11.59-20.png)
+根据大纪元2月24日讯，纽约市长埃里克‧亚当斯（Eric Adams）2月23日表示，纽约市计划在未来几周内逐步取消中共病毒疫苗接种强制令和疫苗护照系统等措施。
 
-我在外面通个电话，我说我有问题，我开开灯，开开灯窗帘也在滑。我说完了，我说我这有幻觉啊，我说没喝酒过今晚上。然后我把灯就关了，一关了就有人跟我说话，然后就宋美龄就站这了，唉呦，我把灯又打开了，打开没有了，看了半天我就睡了，我怕惊醒你嫂子。
+就具体何时取消疫苗护照系统等强制措施，市长没有提供明确的时间表。然而，亚当斯的这次发言是他关于取消这些措施的最明确的态度。几天前，当他回答关于布鲁克林篮网队超级明星凯里‧欧文（Kyrie Irving）的问题时，亚当斯就已经暗示，他想要取消疫苗护照系统。
 
-结果一会儿宋美龄又来了，蒋介石还来了，哇噻，就我说你给我走。我说喊，这喊说你嫂子还喝了片安眠药，我记得特别清楚，我想她喝安眠药了，我千万不能让把她叫醒，我这给你走，把灯又打开，待会又关上。
+近日来，美国多个城市的市政当局都已决定取消疫苗护照措施。周三，芝加哥市长洛里‧莱特福特（Lori Lightfoot）宣布，从2月28日开始，该市某些地区的口罩令和疫苗强制令将被取消。在经过近两年的严格实施疫情强制措施之后，包括新泽西州、特拉华州、康涅狄格州和纽约州在内的多个由民主党人控制的州，都开始放宽疫苗接种强制令和强制戴口罩措施的实施。
 
-他又来了，我就把你七嫂子抽烟，你七嫂有打火机，我就拿着打火机晃在屋里晃，走走走走走，你七嫂醒了：“你干啥？深更半夜的？”我说：“你看把你弄醒了，我说这屋有不干净的东西。”
+参考链接：纽约市长：几周内将取消疫苗强制令与疫苗护照https://www.epochtimes.com/gb/22/2/23/n13600219.htm
 
-“啥不干净的东西？”她说，“我没感觉啊。”
+*发布：tianzhihuan*
 
-我说你抽根烟抽根烟，我一会再跟你说。待了一会抽完烟了，但是我还没给她具体说了，你就睡觉，你七嫂子再睡着的时候，她“扑棱”醒了。她说：“这有人啊这不有一个女的啊”。
-
-我说坏了，我说；“这就是宋美龄女士今天看咱来关心咱来了，蒋介石同志。”咱没闹明白圆山饭店到底怎么回事？一直俺俩坐到天亮，天亮才发现圆山饭店总统套房正北面，你叫大牛、巴黎看去，全是坟墓，都是国民党的高（级）将军坟墓，你知道吗？亨利小哥。
-
-哇噻，昨天再跟你七嫂子说，她说当时咱就没想到对面全是坟墓。我说你看你还说错了，我当年的蒋介石、宋美龄知道，郭文贵你就是替我灭共那个人，我说这是亲昵来看咱来了，咱受不了。
-
-她昨天说你说的有道理，我说这当年你不知道，现在你知道了吧？我说：“我就是蒋介石先生，宋美龄女士，认为你就是那个灭共的人。”我说这不折腾一晚上，所以大早上起来，我们的李祖原大师，我说的过程你们可以验证。李祖原，台湾大楼我们最大的大师李祖原，还有他妻子地瓜（音），还有他的设计合伙人。
-
-大早上来我说还有台湾的金融大老板，我就别说他名字了，你问他我说赶快搬走，我不在这住了，换地方去。我们就换到了那叫什么酒店，台北的另外一个酒店去，就换到另外一个酒店，这就是我真实的经历
-
-字幕来源：[2022月2日6日 《文贵大直播》全文字版](https://gnews.org/zh-hans/1971450/)
-
-编辑整理：Davis；
-
-字幕文件制作：大好河山；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ)、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A)、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/)、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/)；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
