--- a/gnews/37.md
+++ b/gnews/37.md
@@ -1,36 +1,38 @@
 ---
-title: CDC隐瞒加强针数据 FDA专家敦促“说实话”
+title: 五角大楼警告俄罗斯军队随时进攻，情报部门称48小时内全面入侵
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2056020/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2056143/)
 
-撰稿：纽约香草山 – 宁文静
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-40-1-5.png)
-21日外媒報導，美国CDC於2月上旬公布的65岁以下成年人加强针有效性的第一批重要数据，該數據隐瞒了3300万名18-49岁族群的信息，而这族群通常被认为最不可能从加強疫苗中受益。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2200.png)
-爆出此爭議，CDC发言人回應道，担心这些数据会让人认为疫苗加强针无效，并且数据本身不完整，也没有经过核实，因此並未將該部分數據向公众公开。
+#### 撰稿：彩虹       
 
-CDC操纵数据的行為引发了科学界的愤怒，FDA顾问、疫苗专家保罗·奥菲特博士指出，由于CDC隐瞒这些信息，美国科学家不得不依赖以色列的数据。他敦促CDC说出真相，提交数据，让科学家们分析和解释数据代表的意义。流行病学家里维拉博士则说，两年来科学界一直在寻求这些数据，CDC拥有它们却选择隐瞒，这降低了了公众对他们的信任感。
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/16456735211.png)图片来源：卫报
+据《国会山报》2月23日报道，西方领导人周三表示，俄罗斯似乎正在向乌克兰东部转移更多军队，而五角大楼则警告说，俄罗斯军队“随时可能发动攻击”。
 
-参考链接：[疾病預防控制中心拒絕公佈它收集的有關 3300 萬 18-49 歲美國人的增強效果數據，因為擔心這可能表明疫苗無效：FDA 專家告訴疾病預防控制中心“說實話”](https://www.dailymail.co.uk/news/article-10537161/CDC-refusing-publish-data-collected-booster-effectiveness-aged-18-49.html)
+五角大楼新闻秘书约翰·柯比（John Kirby）在一次简报会上说：“我们当然相信，更多的俄罗斯军队正在进入[顿涅茨克和卢甘斯克地区]。我们不能非常具体地确认其数量和编制，所具有的能力是什么，但我们当然相信这正在发生。”
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpeg)
+柯比强调：“我们相信，他们现在处于一种随时可能发动攻击的准备状态。”
 
-总编：zhong
-编辑：飞虹 
-校对/发稿：小野貓（文凱琳）
+周三早些时候，拉脱维亚总理证实，俄罗斯军队已经进入了乌克兰东部的顿巴斯地区。
 
-**更多资讯，更多关注**
+拉脱维亚总理阿特尔斯‧克里斯亚尼斯‧卡林斯告诉CNN：“根据我掌握的信息，普京正在向被占领的顿巴斯领土增派部队和坦克，根据任何定义，这都是跨越主权领土进入邻国的行为。”
 
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+另据《新闻极限》2月23日报道，美国情报官员周三向《新闻周刊》（Newsweek）透露，俄罗斯正准备在未来48小时内对乌克兰实施全面入侵。
 
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+这位美国官员说：“乌克兰总统已被警告，根据美国的情报，俄罗斯极有可能在48小时内开始入侵。来自飞机观察员的报告显示，俄罗斯今天早些时候侵犯了乌克兰的领空，疑似侦察机在乌克兰上空飞行了一小段时间。”
 
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+一位接近乌克兰总统沃洛基米尔·泽伦斯基（Volodymyr Zelenskyy）政府的消息人士也证实，美国发出了这样的警告，尽管他指出，这是基辅在过去一个月内第三次被告知俄罗斯即将采取大规模军事行动。
 
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+据《新闻周刊》报道，这位美国情报人士说，该入侵评估包括俄罗斯的空袭、巡航导弹和地面入侵，以及从北部与白俄罗斯的边境向首都基辅的推进。
 
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-40-1-5.png)
+《新闻周刊》说，另一位参加了周二国家安全委员会电话会议的消息人士也向该出版物证实，白宫对克里姆林宫的军事行动仅限于俄罗斯支持的叛乱共和国感到“难以置信的不相信”，并认为入侵可能在24至48小时内发生。
+
+**新闻来源**
+
+[Pentagon says more Russian troops in Ukraine, ready to ‘attack at any time’](https://thehill.com/policy/defense/595562-pentagon-says-more-russian-troops-in-ukraine-ready-to-attack-at-any-time)
+
+[Report: US Intelligence Warns Ukraine Russia to Invade Within 48 Hours](https://www.newsmax.com/newsfront/russia-ukraine-invasion/2022/02/23/id/1058130/)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
