--- a/gnews/39.md
+++ b/gnews/39.md
@@ -1,23 +1,31 @@
 ---
-title: 中国｜赤化佛教受肯定 班禅十一世两会前表决心：拥护以习为核心的党中央
+title: 新中国联邦新闻、GTV新闻访谈简报&#124;2022年2月23日晚
 ---
-`關注組` [轉載自GNews](https://gnews.org/zh-hans/2055953/)
+`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/2056076/)
 
-**撰文/ 港台前线｜发布日期/ 24/02/2022**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/赤化佛教受肯定-班禪十一世兩會前表決心：擁護以習為核心的黨中央-1.jpg)
-**更多资讯请关注官方盖特｜please follow our Gettr （**[**https://gettr.com/post/pl6w8he0b9**](https://gettr.com/post/pl6w8he0b9)**)**
+作者：香草山翻译部
 
-中共党媒新华社报道，两会前夕，中共中央统战部部长尤权昨天（23日）在北京会见第十一世班禅额尔德尼·确吉杰布。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEW-GTV-MOS-LOGO-4-1-e1645595411271.jpg)
 
-尤权向班禅和藏传佛教界人士祝贺藏历水虎新年，并对班禅近年在各方面取得的进步予以肯定，希望他继续深入学习中国共产党百年奋斗的历史经验，爱国爱教、勤于实践，在推进藏传佛教中国化上发挥更大作用，同时严于律己、谦虚谨慎，不辜负党中央的培养、信众的拥护、宗教界的爱戴。
 
-班禅亦向尤权敬献哈达，表示将坚决拥护以中共总书记习近平为核心的党中央，坚持藏传佛教中国化方向，努力在促进藏传佛教与社会主义社会相适应上作出新成绩。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/text-SC-17.png)
+校对：Stay文苑
 
-十一世班禅颇受到中共历届领导人的重视与厚待，自1995年起，中共三任总书记江泽民、胡锦涛和习近平都接受过班禅拜见。
+编辑：Stay文苑
 
-根据外界普遍认知，**无论是藏传佛教抑或是其他佛教，佛教的基本教义应该是以践行并弘扬佛祖释迦牟尼佛训为修法核心。**
+发稿：Stay文苑
 
-来源｜[人民日报](http://cpc.people.com.cn/n1/2022/0224/c64094-32358635.html)
+新闻：[https://gtv.org/broadcast/watch/6216e14e08ba8a07b1a26849](https://gtv.org/broadcast/watch/6216e14e08ba8a07b1a26849)
+访谈：[https://gtv.org/broadcast/watch/6216e84908ba8a07b1a26deb](https://gtv.org/broadcast/watch/6216e84908ba8a07b1a26deb)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-calendar-4.png)
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
 
  
 
