--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,36 +1,47 @@
 ---
-title: 大直播后记：各国背后的政治较量
+title: 中国女人要出人头地要么有色要么有颗阴歹的心——吴仪
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2056542/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2056702/)
 
-整理：文晋、枫叶红了
-编辑：小红帽
+G-TV视频链接：[https://gtv.org/video/id=621240f11408ee3a03a23b4e](https://gtv.org/video/id=621240f11408ee3a03a23b4e)
 
-- ![文章配图](https://assets.gnews.org/wp-content/uploads/2022/02/1-213.png)图片来源：雅典娜农场设计组（614）
+**郭文贵先生：**中国最牛的女的这些年执政的就那几个人，吴仪副总理最强的——WTO的创始者，我专门跟她，后来七哥八九六四出来以后，那当然就不一样，看待女性就不一样了，更不一样。我说：“你怎么看待半边天？”连吴仪都说：“在中国这个国家，女人但凡出人头地，要么有色，要么有个阴歹的心。”
 
+你告诉我女人你有色，有色就有人睡你吧？是不是？彭丽媛的弟弟彭磊，我们给他选过美，连Q May都被选上过，是吧？Q May当年也是被选上之一，那时候还不知道有个Ryan在呢，是吧？头两天Q May还找出Ryan在盘古跟她一起演奏的照片，圣诞会的，看得我老激动了，不知道她从哪儿捣腾出来的。那时候Q May就是被选中之一啊，是吧？
 
-大家记住，普京在两个月以前就说，我们被西方骗了。当初被西方骗的就是明斯克协议，包括乌克兰不通过。我都问过当事人，他承认把普京给骗了。
+那么你去想想他会选长丑的吗？不选，他选就长好看的，所谓生辰八字、长的样子好看的。那时候的Q May在我心目中我真的没有什么记忆力了，唐平告诉我说这个人我都没有记忆力了，因为我觉得当时那个小女孩特别小，很小，不像现在那么高大的一个女的，那时候Q May就像小新那个样子，很小的一个女孩，很瘦的女孩，现在这家伙站的又高又大的，就好像变了个人似的，完全对不上号。但是就这被选上了，就是生孩子的工具嘛。
 
-大家知道顿涅茨克，卢甘斯克这两个地方不是开玩笑的。这就像中国和台湾之间的关系一样。福建省漳州或者前面叫什么岛啊？就这意思。你不能过，就这么个战略。
+那么我们看到就吴仪说的话——就你漂亮你有生存的空间。习近平的弟弟娶（张）澜澜，是吧？好看；再一个，你上去你就心狠歹毒，啥都能干，是吧？什么都能干，是吧？奥巴马俱乐部、包小白脸、杀人越货，你看女贪官抓起来以后都比男的狠，就是变态。
 
-普京说，这回大兵来了。以后第一件事，欧洲，美国必须向我法律承诺，你绝对不东扩了，咱再坐下来聊–我再打不打乌克兰。马克龙还有美国副总统在德国见面以后，马克龙还有美国亲自签上字的，对普京的绝对承诺，北约不东扩。就这么秘密的协议，普京一下子就给撂到网上去了。
+所以在中国这个国家女性是没有“半边天”的，女性是共产党执政的工具，是全社会，实际上不管你对父母、对家人，我可以告诉你们，你妈妈累死你觉得你妈就该给累死，你没有多少人认为妈妈那么辛苦是不是不公平？我觉得不管你是（文）大石还是天石，不管你是亨利还是文真，还是你小新，你们从来没有体贴过母亲，我不相信你们公平对待过母亲。中国女性从母亲、从姐妹、从任何角度都没被公平对待过，特别是中国这种男性的社会，只是你不知道。
 
-人类上从来是有规矩的，不管多乱，国与国总统元首的通话是永远不会公布出来的。当时，你记得希拉里和川普所谓竞选当中讲最多—说这个川普就不靠谱，精神不正常，很不稳定，不可确定性，是攻击川普的最重要点；说这家伙随时可以按动核按钮，而且跟外国领导人说的话，他随时可以说出去，他的嘴不靠谱。结果发现，川普的嘴最靠谱，也没有按核按钮，是吧？这是国与国之间不可发生的事情，这对美国和欧洲简直是羞辱到了极点。
+字幕来源：[2022月2日6日 《文贵大直播》全文字版](https://gnews.org/zh-hans/1971450/)
 
-人家兵一派，美国就跪下来了。求求你了，大爷，我签我签。然后法国也是，我签，我签。这是西方有史以来，你可查的，从罗马时代都没有发生过的。人家瞬间就给你挂到外交部网站上去。就这，对不起啊，我照样修理你。顿涅茨克，卢甘斯克马上通过。什么意思？你去想想这什么概念。如果是习大太阳，把兵派到金门，然后法律化，接着美国，日本签署了协议永远不和中国开战并作出所有的表态。你打了，就经济惩罚你。这时候，人家把两个国的协议都放到网站上，如此之羞辱美、英、法，日。所有的西方国家签署了一个，就像当年德国签下了的，永不服气的巴黎协定。那个协议在火车上签的。之后，希特勒把那火车都拖回德国去了，是吧？在那个德国，在那火车上让法国，英国签下来羞辱的协议，是吧？
+编辑整理：Davis；
 
-普京，用签字，用这个法律，用少量的兵，一下子就征服了世界的金融经济。 而现在，习太阳以为给他勾兑得很好，有效地拖住了美国对我们的，所谓的攻击。这整个对我们是有利的。刺激啊。现在我们在这方面要动作迅速。习太阳就想在三小时内拿下台湾，任何人不让你知道。国安委国内所有人都不知道，军队只有许其亮几个人知道。我按这一个按钮，军队就过去。我告诉你，习近平就在这一刻，就憋这个招。他以为全世界都乱那一会，我都上去。但是他没想到，你记住，美国人就在那等着呢。美国人就要让你狼和狈之间形成互咬的局面，然后全世界一塌糊涂，完全崩落的时候，已经从天上掉下来的时候，来一只大手叫山姆大叔，一把接住，放在手里，你会太平的。然后伸出美国山姆的大脚，把狼踢一边去，这才是美国好莱坞的大片啊。拯救全人类拯救地球。是吧？在这场大戏中，中国人被耍，中国人将为习太阳，将为共产党，一次性买单。
+字幕文件制作：神兵；
 
-资料来源：郭文贵先生2022年2月23日大直播
+视频制作及上传：Cindy；
 
-发布：tianzhihuan
+G-News发布：小满；
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ)、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A)、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/)、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/)；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
