--- a/gnews/40.md
+++ b/gnews/40.md
@@ -1,37 +1,23 @@
 ---
-title: 韩国单日新增确诊病例突破17万例 再创历史新高
+title: 加拿大爱德华王子岛将停止疫苗护照
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2055901/)
+`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/2056074/)
 
-作者：首尔天池农场—追着曙光跑
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-40-1-5.png)
-据韩媒2月23日报道，韩国中央检疫对策本部宣布，截至今日（23日）零时，新增确诊病例17万1452例，首次突破17万大关，创历史新高。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2198.png)
-截至日前，韩国的疫苗首针接种率为87.27%，完全接种率为86.30%，第三针加强针接种率59.65%。从15日开始给免疫力低下人群接种第四针剂。
+加拿大温哥华杨帆农场 枫叶快讯
 
-完全接种率已经远超过群体免疫的70%，第三针加强针也快达60%，但感染人数却剧增。
+采编： 文莱             翻译编辑：文所未闻
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2201.png)Source：
+据加拿大媒体《CTV新闻》2月23日报道，爱德华王子岛省长当天宣布，该省将于2月28日废除“新冠病毒”疫苗护照系统。
 
-参考链接：[韓國日增新冠確診病例首破17萬例](http://news.cnwest.com/tianxia/a/2022/02/23/20332046.html)
+对此，该省首席公共卫生官表示此举是一个积极的解禁信号，是对更持久地与该病毒和谐共处的及时调整。同时疫情监管和病毒检测等其他公共卫生措施仍将被继续执行。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpeg)
+据悉，该省的疫苗接种率全国最高，近94%的人已接种了两剂疫苗。相信在经济发展和社会民生的双重压力下，其他各省也必将完全取消百害而无一利的疫苗护照政策。
 
-总编：zhong
-编辑：Lakeman文仁 
-校对/发稿：小野貓（文凱琳）
+校对编辑：硫酸羟氯喹6
 
-**更多资讯，更多关注**
+发稿：青青
 
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-40-1-5.png)
-
+原文链接： [https://atlantic.ctvnews.ca/p-e-i-to-end-covid-19-vaccine-passport-system-next-week-1.5792433](https://atlantic.ctvnews.ca/p-e-i-to-end-covid-19-vaccine-passport-system-next-week-1.5792433)
 
  
 
