--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,58 +1,26 @@
 ---
-title: 七哥第三次ED:在梅地亚与最火港星因八九六四共鸣未果
+title: 有声｜加拿大总理特鲁多宣布结束《紧急状态法》
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2056498/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2056683/)
 
-G-TV视频链接：[https://gtv.org/video/id=62123ebc1408ee3a03a2395e](https://gtv.org/video/id=62123ebc1408ee3a03a2395e)
+**By:秘翻新闻**
 
-**郭文贵先生：**第三次掌声没有，所以不说了。你们这听着就没掌声，我怎么说第三次对吧？
+**2022-02-24**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-355.jpg)图片源自:网络
+据《网关专家》2月23日报道，加拿大发生了惊人的逆转，当地时间周三下午，加拿大总理贾斯汀.特鲁多在新闻发布会上宣布，将停止使用《紧急状态法》。
 
-第三次梅地亚，为啥我说梅地亚宾馆，那时候去梅地亚，那时候你知道每个人都有虚荣的心，七哥也有虚荣的心。一到所有的中央电视台什么《春节联晚会》，我还送人进去还有票，然后就梅地亚所有的明星都在那，都大咖是吧？
+特鲁多称，局势已经不再是紧急情况。并表示，现有的法律和章程目前足以保证人们的安全。同时特鲁多还表示，将在几小时内正式签署撤销令，结束紧急状态。
 
-那个时候什么这个那个……杨澜在那时候不算多牛的人，她不算是什么牛人，那时候最火的是倪萍、什么陈涛、什么这涛，什么刘涛，就这些牛人，是吧？还有下边人，赵忠祥那时候的，还有些下边就是香港的、台湾在那去。
+特鲁多于 2 月 14日宣布启动《紧急状态法》，本周一，加拿大众议院的议员投票确认继续使用这一法案。但仅仅两天后，特鲁多就宣布取消使用。
 
-某明星，七哥也看着了，跟人家“掉眼线“，老电！人家也电是吧？最后就约会了是吧？约会之后人讲一句话，就把我吓了，一下子就愣在那了。她说你知道我当年为什么在中央电视台消失一段时间了？啊我说不知道。
+报道称，突然放弃使用《紧急状态法》是一个出人意料的决定。特鲁多在过去10天里一直利用《紧急状态法》，利用近乎无限的权力来恐吓和骚扰卡车司机车队的和平抗议活动。
 
-“八九六四，因为我说几句真话。”完了七哥一样傻眼了，不行了。就她一说“八九六四”，“咣叽”就给扔到清丰看守所去了。我说：“你还替“八九六四”说过话。”她说：“对啊。”我：“那个时候你在我们心目中你可是老火了啊。虽然你比我大，但是你太火了。你为什么替八九六四说话呢？”
+（ 秘翻新闻  冰糖葫芦喵编译报导 ）
 
-哇，她就“啪”说“我抽根烟，你不介意吧？”，“啪”就拿根烟抽了。你想想对面一个超级女明星，当年中国最火人之一。然后光着裸体的身体，坐在了梅地亚那个木扶手的沙发上，翘着腿给你点着一根烟的感觉。
+发布:星星
 
-你想想谁受得了？你必须得说，有些人真跟你一般人不一样。她是真漂亮，我永远难忘。我觉得比真的是比《火图》，我觉得那个图还漂亮。她真漂亮，那个美，那个身体、那个皮肤、感觉。那个人，她出名当时那个现状。
-
-抽了烟深思半天，她说你记得八九六四吗？我说我记得，她当然不知道我背景了，那你怎么看待八九六四？我不能像现在这样这么瞎胡说，我得保护我自己，我说：“那就一场灾难，可惜的是人被利用了，我说但这一天还会回来的。”
-
-哇！“哗”一过来，坐在了我这腿上，我都没反应过来，“咔”我这一坐，抽着烟说：“就凭你这句话，咱今天，得好好的让你享受享受我！”
-
-但是我没感觉了，她到今天，我希望她有看我今天说的，知道当天我为啥不行。她不说“八九六四”肯定行了，这一“八九六四”我肯定不行。
-
-字幕来源：[2022月2日6日 《文贵大直播》全文字版](https://gnews.org/zh-hans/1971450/)
-
-编辑整理：Davis；
-
-字幕文件制作：大好河山；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ)、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A)、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/)、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/)；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-321.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
